--- a/index.html
+++ b/index.html
@@ -2,8 +2,6 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora</title>
 
     <link rel="stylesheet" href="style.css">
@@ -36,8 +34,8 @@
         <br>
         <button id="00">00</button>
         <button id="0">0</button>
-        <button id="=" class="operator">=</button>
-
+        <button id="=" class="equal operator">=</button>
+        <br>
     </div>
     
 </body>
