--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Calculadora</title>
 
     <link rel="stylesheet" href="style.css">
-    <script src="/script.js"></script>
+    <script src="script.js" defer></script>
 
 </head>
 <body>
